--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
+# Ignore everything
+*
+
+# But descend into directories
+!*/
+
+!*.gitignore
+!*.py
+!*.ipynb
+!*.md
+!example_gtfs_bart/*
+
+# Ignore
+*.ipynb_checkpoints*
+beijing_tang
 2021 Working files
-.ipynb_checkpoints
-.DS_Store
-outputs
